--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -10,7 +10,7 @@
     Ensure golden ratio for the hero size while limiting it to some extend to
     the viewport width
   */
-  height: 61.8vh;
+  height: 30vh;
   max-height: 400px;
 }
 
@@ -18,8 +18,8 @@
   position: absolute;
   background: rgba(0, 0, 0, 0.7);
   left: 50%;
-  bottom: 0;
-  transform: translate(-50%, 0);
+  top: 50%;
+  transform: translate(-50%, -50%);
   font-size: 14px;
   padding: 0 0.5em;
 }
