--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,4 +1,5 @@
 .navigation {
+  position: relative;
   display: flex;
   justify-content: center;
   list-style: none;
@@ -7,6 +8,7 @@
   height: 20vh;
   max-height: 100px;
   font-size: 1.25em;
+  background-color: white;
 }
 
 .navigationItem {
@@ -17,4 +19,16 @@
 
 .navigationItem a {
   color: currentColor;
+}
+
+.logo {
+  position: absolute;
+  left: 0;
+  padding-left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.logolink {
+  text-decoration: none ;
 }
